Fixed Input to not go out of box when window is shrunk

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,4 +94,5 @@ input{
 	margin-top: 5px;
 	font-size: 20px;
 	padding-left: 5px;
+	width: 80%;
 }
